--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,7 +1,7 @@
-VITE_GLOB_API_URL=http://192.168.2.152:8003
+VITE_GLOB_API_URL=http://localhost:8003
 # VITE_GLOB_API_URL=https://site.123qiming.com
 
-VITE_APP_API_BASE_URL=http://192.168.2.152:8003
+VITE_APP_API_BASE_URL=http://localhost:8003
 # VITE_APP_API_BASE_URL=https://site.123qiming.com
 VITE_GLOB_OPEN_LONG_REPLY=false
 
