--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,28 +8,31 @@ services:
     ports:
       - "8088:8002"
     restart: always
-    environment:
-      - SQLALCHEMY_DATABASE_URL=postgresql://postgres:Fucheng830@postgres:5432/quchat
-      - SQLALCHEMY_ECHO=False
-      - SECRET_KEY=BAkeabIiyguqHC9G68T_gJcpdYZUIA2ggdaM
-      - OPENAI_API_KEY=sk-Yk0olnsQORHmF1F0F91bC1Df9b544c2e8f0c5541Bb5aE1Dd
-      - OPENAI_API_KEY_PLUS=sk-Yk0olnsQORHmF1F0F91bC1Df9b544c2e8f0c5541Bb5aE1Dd
-      - OPENAI_BASE_URL=http://192.168.2.153:9009/v1
-      - REDIS_URL=redis://redis:6379/0
-    depends_on:
-      - postgres
-      - redis
+    # environment:
+    #   - SQLALCHEMY_DATABASE_URL=postgresql://postgres:Fucheng830@postgres:5432/talu
+    #   - SQLALCHEMY_ECHO=False
+    #   - SECRET_KEY=BAkeabIiyguqHC9G68T_gJcpdYZUIA2ggdaM
+    #   - REDIS_URL=redis://redis:6379/0
+    # depends_on:
+    #   - postgres
+    #   - redis
 
-  postgres:
-    image: ankane/pgvector
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Fucheng830
-      - POSTGRES_DB=quchat
-    ports:
-      - "5434:5432"
+  # postgres:
+  #   image: ankane/pgvector
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=Fucheng830
+  #     - POSTGRES_DB=talu
+  #   ports:
+  #     - "5434:5432"
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
 
-  redis:
-    image: redis:latest
-    ports:
-      - "6381:6379"
+  # redis:
+  #   image: redis:latest
+  #   ports:
+  #     - "6381:6379"
+
+# volumes:
+#   postgres_data:
+#     driver: local
