--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,8 +6,49 @@ authors = ["fucheng <fucheng@123qiming.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 langchain = {extras = ["all"], version = "^0.2.10"}
+docx2txt = "^0.8"
+email-validator = "^2.2.0"
+faiss-cpu = "^1.8.0.post1"
+flask-cors = "^4.0.1"
+gitpython = "^3.1.43"
+html2text = "^2024.2.26"
+httptools = "^0.6.1"
+httpx-sse = "^0.4.0"
+json5 = "^0.9.25"
+langchain-community = "^0.2.9"
+langchain-experimental = "^0.0.62"
+langchain-openai = "^0.1.17"
+langchain-postgres = "^0.0.9"
+langchainhub = "^0.1.20"
+langgraph = "^0.1.9"
+langserve = "^0.2.2"
+nbconvert = "^7.16.4"
+pandas = "^2.2.2"
+pillow = "^10.4.0"
+pipdeptree = "^2.23.1"
+playwright = "^1.45.0"
+psycopg2 = "^2.9.9"
+pydantic-extra-types = "^2.9.0"
+pydantic-settings = "^2.3.4"
+pysocks = "^1.7.1"
+pytest-asyncio = "^0.23.8"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.9"
+rank-bm25 = "^0.2.2"
+redis = "^5.0.7"
+selenium = "^4.23.0"
+sse-starlette = "^2.1.2"
+structlog = "^24.4.0"
+tavily-python = "^0.3.5"
+ujson = "^5.10.0"
+unstructured = "^0.15.0"
+uvloop = "^0.19.0"
+watchdog = "^4.0.1"
+watchfiles = "^0.22.0"
+websockets = "^12.0"
+wheel = "^0.43.0"
 
 
 [build-system]
