--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,7 +29,6 @@ pandas = "^2.2.2"
 pillow = "^10.4.0"
 pipdeptree = "^2.23.1"
 playwright = "^1.45.0"
-psycopg2 = "^2.9.9"
 pydantic-extra-types = "^2.9.0"
 pydantic-settings = "^2.3.4"
 pysocks = "^1.7.1"
@@ -49,6 +48,8 @@ watchdog = "^4.0.1"
 watchfiles = "^0.22.0"
 websockets = "^12.0"
 wheel = "^0.43.0"
+fastapi = "^0.111.1"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
