--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@langchain/community": "^0.0.45",
     "@langchain/core": "^0.1.55",
     "@langchain/openai": "^0.0.26",
+    "@lobehub/icons": "^1.27.0",
     "@traptitech/markdown-it-katex": "^3.6.0",
     "@vue-flow/background": "^1.3.0",
     "@vue-flow/controls": "^1.1.1",
