Update TypeScript types for chat component event handlers

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,14 +1,11 @@
-# Glob API URL
 VITE_GLOB_API_URL=''
-
 VITE_APP_API_BASE_URL=''
-# Whether long replies are supported, which may result in higher API fees
-VITE_GLOB_OPEN_LONG_REPLY=false
-
 # When you want to use PWA
 VITE_GLOB_APP_PWA=false
 
-# VITE_APP_WECHAT_APPID=wxb4767a40370284f9
-
-# VITE_APP_WECHAT_REDIRECT_URI="http://quchat.123qiming.com/#/wechatCheck"
-
+VITE_APP_TITLE="QuChat国内版chatgpt人工智能助手"
+VITE_APP_DESCRIPTION="QuChat是一个国内版chatgpt，它基于人工智能技术，可以进行自然语言对话，为用户提供智能化的问答和聊天服务。QuChat的功能包括但不限于闲聊、知识问答、天气查询、新闻资讯等，用户可以通过文字输入与QuChat进行交互。QuChat的目标是为用户提供更加便捷、高效、智能化的聊天体验。"
+VITE_APP_KEYWORDS="QuChat, chatgpt, 人工智能"
+VITE_APP_FAVICON="/favicon.svg"
+VITE_APP_APPLE_TOUCH_ICON="/favicon.ico"
+VITE_APP_BAIDU_HM_SRC="https://hm.baidu.com/hm.js?8dee17eb41bd25190ca1ceb42477e632"
